added audiences and validations on name
